--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Jun 02 11:39:27 CLT 2020
+#Tue Jun 02 11:57:56 CLT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-milestone-1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-milestone-1-all.zip
